GL/Projet_GL/src/test/deca/context/invalid/classes/champ_inexistant.deca
// Description:
// Test contextuel : sélection d'un champ inexistant.
//
// Resultats:
//    Champ non defini dans la classe.
//    Erreur affichée: Identifier x is not defined
//

class A {}
{
   A a;
   a.x;
}
